orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/Canvas_Contribution__c.object-meta.xml
<CustomObject>
    <description>An encrypted, scoped contribution submitted to a shared Org Loom canvas. Contributions remain in the customer Salesforce org until the canvas owner merges them.</description>
    <label>Canvas Contribution</label>
    <nameField>
        <displayFormat>ORGCN-{000000}</displayFormat>
        <label>Contribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Contributions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>