orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Canvas__c.field-meta.xml
<CustomField>
    <fullName>Canvas__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The Salesforce metadata record for the canvas receiving this contribution.</description>
    <label>Canvas</label>
    <referenceTo>Orgloom_Canvas__c</referenceTo>
    <relationshipLabel>Canvas Contributions</relationshipLabel>
    <relationshipName>Canvas_Contributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>