orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Canvas_Id__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Id__c</fullName>
    <description>The ContentDocument id of the destination canvas.</description>
    <label>Canvas ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>