orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Canvas_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Version_Id__c</fullName>
    <description>The canvas version the contributor viewed before submitting.</description>
    <label>Canvas Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>