orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Contributor_Sf_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Sf_User_Id__c</fullName>
    <description>The Salesforce user who submitted this contribution.</description>
    <label>Contributor Salesforce User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>