orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Encrypted field patch. Org Loom decrypts it only while merging it into the destination canvas.</description>
    <label>Encrypted Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>