orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Payload_Sha256__c.field-meta.xml
<CustomField>
    <fullName>Payload_Sha256__c</fullName>
    <description>Integrity checksum for the encrypted contribution payload.</description>
    <label>Payload SHA-256</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>