orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Slot_Id__c.field-meta.xml
<CustomField>
    <fullName>Slot_Id__c</fullName>
    <description>The stable id of the contributor request this submission completes.</description>
    <label>Request ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>