orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Whether the contribution is waiting, merged, or replaced by a newer submission.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Submitted</fullName><default>true</default><label>Submitted</label></value>
            <value><fullName>Merged</fullName><default>false</default><label>Merged</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>