orgloom-package/force-app/main/default/objects/Canvas_Contribution__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <description>When the contributor submitted this field patch.</description>
    <label>Submitted At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>